--- a/public/main.css
+++ b/public/main.css
@@ -86,6 +86,8 @@ h6 {
     text-align: center;
 }
 
+.card:nth-child(even) {background-color: #f2f2f2;}
+
 /*Mobile Design Grid*/
 [class*="col-"] { /* 3 col per section, 4 col per section and so on*/
     width: 100%;
