--- a/public/main.css
+++ b/public/main.css
@@ -82,11 +82,81 @@ h6 {
     font-size: .67em;
 }
 
+/*Globals*/
+
+.v_100 {
+    height: 100vh;
+}
+
 .center {
     text-align: center;
 }
 
-.card:nth-child(even) {background-color: #f2f2f2;}
+.left {
+    text-align: left;
+}
+
+.inline-block {
+    display: inline-block;
+}
+
+.br_grey {
+    background-color: #f5f6f8;
+}
+
+.card {
+    background-color: #ffffff;
+    border-bottom: 1px solid #ccd6dd;
+    border-radius: 5px;
+    margin: 10px auto;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    
+}
+
+.card-width {
+    max-width: 600px;
+}
+
+.br_100 {
+    border-radius: 100%;
+}
+
+.margin-auto {
+    margin: auto;
+}
+
+.p_10 {
+    padding-right: 10px;
+    padding-left: 10px;
+}
+
+.p_5TB {
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+
+.v_top {
+    vertical-align: top;
+}
+
+.text-width {
+    max-width: 400px;
+} 
+
+.inline {
+    display: inline;
+}
+
+.inline-flex {
+    display: inline-flex;
+}
+
+.bold {
+    font-weight: 900;
+}
+
+/*End Globals*/
 
 /*Mobile Design Grid*/
 [class*="col-"] { /* 3 col per section, 4 col per section and so on*/
